--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,11 @@
         android:layout_height="wrap_content"
         android:text="@string/result_placeholder"
         android:paddingTop="16dp" />
+
+    <Button
+        android:id="@+id/languageButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/change_language" />
 </LinearLayout>
